css/main.css
body {
	background: #c1b6d0;
}


.calculator {
    display: block;
    height: 420px;
    width: 300px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 15vw;
    background: #8d78ab;
    border-radius: 20px;
    box-shadow: 15px 16px 16px #4d4b50, inset 12px -12px 12px 1.1px #595867;
}

.cal-title{
    position: relative;
    float: left;
    width: 100%;
    height: 35px;
}

.keypad {
	float: left;
    width: 280px;
    margin-left: 15px;
    margin-right: 5px;
    height: 215px;
    margin-top: 8px;
    margin-bottom: 10px;
}

.cal-screen {
	position: relative;
    float: left;
    width: 100%;
    height: 150px;
    background: rgb(50,48,76);
    background: -moz-linear-gradient(-45deg, rgba(50,48,76,1) 0%, rgba(17,12,50,1) 100%);
    background: -webkit-linear-gradient(-45deg, rgba(50,48,76,1) 0%,rgba(17,12,50,1) 100%);
    background: linear-gradient(135deg, rgba(50,48,76,1) 0%,rgba(17,12,50,1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#32304c', endColorstr='#110c32',GradientType=1 );
}

.screen-input {
    padding: 1px 0px;
    background: transparent;
    border: none;
    outline: none;
    color: #5536ff;
    width: 90%;
    text-align: right;
    font-family: 'Orbitron', sans-serif;
    font-size: 40px;
    margin-left: 15px;
    margin-top: 22px;
}

.logger {
	font-size: 20px;
}

.clearer {
	 width: 115px;
    margin-left: 15px;
    height: 35px;
}

button {
	 width: 45px;
    height: 35px;
    margin-top: 15px;
    margin-left: 1.2px;
    margin-right: 2px;;
}

